sigar-sys/sigar/include/sigar.h

typedef unsigned __int64 sigar_uint64_t;
typedef unsigned long sigar_uint64_t;
typedef unsigned long long sigar_uint64_t;
typedef sigar_uint64_t sigar_pid_t;
	typedef pid_t sigar_pid_t;
typedef struct sigar_t sigar_t;
typedef struct {
    sigar_uint64_t total;
    sigar_uint64_t sleeping;
    sigar_uint64_t running;
    sigar_uint64_t zombie;
    sigar_uint64_t stopped;
    sigar_uint64_t idle;
    sigar_uint64_t threads;
} sigar_proc_stat_t;
SIGAR_DECLARE(int) sigar_proc_stat_get(sigar_t *sigar,
                                       sigar_proc_stat_t *procstat);
typedef struct {
    sigar_uint64_t
        size,
        resident,
        share,
        minor_faults,
        major_faults,
        page_faults;
} sigar_proc_mem_t;
SIGAR_DECLARE(int) sigar_proc_mem_get(sigar_t *sigar, sigar_pid_t pid,
                                      sigar_proc_mem_t *procmem);
typedef struct {
     sigar_uint64_t
        bytes_read,
        bytes_written,
        bytes_total;
} sigar_proc_disk_io_t;
SIGAR_DECLARE(int) sigar_proc_disk_io_get(sigar_t *sigar, sigar_pid_t pid,
                                          sigar_proc_disk_io_t *proc_disk_io);
typedef struct {
    sigar_uint64_t
        bytes_read,
        bytes_written,
        bytes_total;
    sigar_uint64_t last_time;
    sigar_uint64_t
        bytes_read_diff,
        bytes_written_diff,
        bytes_total_diff;
} sigar_cached_proc_disk_io_t;
typedef struct {
    sigar_uint64_t
        bytes_read,
        bytes_written,
        bytes_total;
} sigar_proc_cumulative_disk_io_t;