sigar-sys/src/ffi.rs

#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_proc_stat_t {
    pub total: sigar_uint64_t,
    pub sleeping: sigar_uint64_t,
    pub running: sigar_uint64_t,
    pub zombie: sigar_uint64_t,
    pub stopped: sigar_uint64_t,
    pub idle: sigar_uint64_t,
    pub threads: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_proc_stat_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_stat_t>(),
        56usize,
        concat!("Size of: ", stringify!(sigar_proc_stat_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_stat_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_stat_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_stat_t>())).total as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_stat_t),
            "::",
            stringify!(total)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_stat_t>())).sleeping as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_stat_t),
            "::",
            stringify!(sleeping)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_stat_t>())).running as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_stat_t),
            "::",
            stringify!(running)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_stat_t>())).zombie as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_stat_t),
            "::",
            stringify!(zombie)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_stat_t>())).stopped as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_stat_t),
            "::",
            stringify!(stopped)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_stat_t>())).idle as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_stat_t),
            "::",
            stringify!(idle)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_stat_t>())).threads as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_stat_t),
            "::",
            stringify!(threads)
        )
    );
}
extern "C" {
    pub fn sigar_proc_stat_get(
        sigar: *mut sigar_t,
        procstat: *mut sigar_proc_stat_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_proc_mem_t {
    pub size: sigar_uint64_t,
    pub resident: sigar_uint64_t,
    pub share: sigar_uint64_t,
    pub minor_faults: sigar_uint64_t,
    pub major_faults: sigar_uint64_t,
    pub page_faults: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_proc_mem_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_mem_t>(),
        48usize,
        concat!("Size of: ", stringify!(sigar_proc_mem_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_mem_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_mem_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_mem_t>())).size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_mem_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_mem_t>())).resident as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_mem_t),
            "::",
            stringify!(resident)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_mem_t>())).share as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_mem_t),
            "::",
            stringify!(share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_mem_t>())).minor_faults as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_mem_t),
            "::",
            stringify!(minor_faults)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_mem_t>())).major_faults as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_mem_t),
            "::",
            stringify!(major_faults)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_mem_t>())).page_faults as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_mem_t),
            "::",
            stringify!(page_faults)
        )
    );
}
extern "C" {
    pub fn sigar_proc_mem_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        procmem: *mut sigar_proc_mem_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_proc_disk_io_t {
    pub bytes_read: sigar_uint64_t,
    pub bytes_written: sigar_uint64_t,
    pub bytes_total: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_proc_disk_io_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_disk_io_t>(),
        24usize,
        concat!("Size of: ", stringify!(sigar_proc_disk_io_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_disk_io_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_disk_io_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_disk_io_t>())).bytes_read as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_disk_io_t),
            "::",
            stringify!(bytes_read)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_proc_disk_io_t>())).bytes_written as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_disk_io_t),
            "::",
            stringify!(bytes_written)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_proc_disk_io_t>())).bytes_total as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_disk_io_t),
            "::",
            stringify!(bytes_total)
        )
    );
}
extern "C" {
    pub fn sigar_proc_disk_io_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        proc_disk_io: *mut sigar_proc_disk_io_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_cached_proc_disk_io_t {
    pub bytes_read: sigar_uint64_t,
    pub bytes_written: sigar_uint64_t,
    pub bytes_total: sigar_uint64_t,
    pub last_time: sigar_uint64_t,
    pub bytes_read_diff: sigar_uint64_t,
    pub bytes_written_diff: sigar_uint64_t,
    pub bytes_total_diff: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_cached_proc_disk_io_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_cached_proc_disk_io_t>(),
        56usize,
        concat!("Size of: ", stringify!(sigar_cached_proc_disk_io_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_cached_proc_disk_io_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_cached_proc_disk_io_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_cached_proc_disk_io_t>())).bytes_read as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cached_proc_disk_io_t),
            "::",
            stringify!(bytes_read)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_cached_proc_disk_io_t>())).bytes_written as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cached_proc_disk_io_t),
            "::",
            stringify!(bytes_written)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_cached_proc_disk_io_t>())).bytes_total as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cached_proc_disk_io_t),
            "::",
            stringify!(bytes_total)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_cached_proc_disk_io_t>())).last_time as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cached_proc_disk_io_t),
            "::",
            stringify!(last_time)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_cached_proc_disk_io_t>())).bytes_read_diff as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cached_proc_disk_io_t),
            "::",
            stringify!(bytes_read_diff)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_cached_proc_disk_io_t>())).bytes_written_diff as *const _
                as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cached_proc_disk_io_t),
            "::",
            stringify!(bytes_written_diff)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_cached_proc_disk_io_t>())).bytes_total_diff as *const _
                as usize
        },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cached_proc_disk_io_t),
            "::",
            stringify!(bytes_total_diff)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_proc_cumulative_disk_io_t {
    pub bytes_read: sigar_uint64_t,
    pub bytes_written: sigar_uint64_t,
    pub bytes_total: sigar_uint64_t,
}
